# python-project-174

./: .flake8  .gitignore  Makefile  README.md  demo.cast  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
gendiff/: __init__.py  diff.py  generate_diff.py  parsers.py
gendiff/formatters/: json_formatter.py  plain_formatter.py  stylish_formatter.py
gendiff/scripts/: cli.py  gendiff.py
tests/: test_generate_diff.py  test_json.py  test_json_diff.py  test_plain.py  test_yaml_diff.py
tests/fixtures/: expected_diff.txt  file1.yaml
