[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "tool to Compares two configuration files and shows their differences"
authors = ["dayan marin"]
packages = [
  { include = "gendiff" },
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
